<resources>
    <string name="app_name">MateyTeam</string>
    <!-- Login page string-->
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="repeatpass">Repeat Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgetpass">Forget Password</string>
    <string name="retrievpass">Retrieve Password</string>


    <!-- Register-->
    <string name="studentid">Student Id</string>
    <string name="name">Name</string>

    <!--- forget password-->
    <string name="forgetext">If you’ve forgotten your password ,
        enter your e-mail address, and we’ll send you an e-mail to recover password.</string>


    <!-- Content description-->
    <string name="logo">Logo</string>

    <!-- Value for the activity-->
    <string name="Register">Register</string>
    <string name="Forgot">Forgot</string>
    <string name="title_activity_main_navi_after_login">MainNaviAfterLogin</string>

    <!-- Detail-->
    <string name="f">Female</string>
    <string name="M">Male</string>
    <string name="tut">Tutor</string>
    <string name="stu">Student</string>

    <!-- Subjects -->
    <string name="cs">Computer Science</string>
    <string name="bui">Buissness</string>
    <string name="law">Law and Finance</string>
    <string name="health">Healthcare Practice</string>
    <string name="art">Art and Design</string>
    <string name="phy">Physcology</string>
    <string name="media">Media and Performance</string>

    <!--- Internal storage key -->
    <string name="semail">sharedemail</string>
    <string name="spass">SharedPassword</string>
    <string name="sstate">SharedState</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main_navi">MainNavi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
