<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vaibhav.upworkfirstproject.Login">


    <ImageView
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:background="@mipmap/logo"
        android:scaleType="fitXY"
        android:id="@+id/imagelogo"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo" />
    <!-- Email-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imagelogo"
        android:layout_marginTop="32dp"
        android:id="@+id/textlayout_email">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_email"
            android:hint="@string/email"

            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <!--Password -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textlayout_email"
        android:id="@+id/textlayout_password">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/input_password"
            android:hint="@string/password"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textsize"
        android:text="@string/register"
        android:layout_marginTop="8dp"
        android:id="@+id/textview_register"
        android:layout_below="@id/textlayout_password"
        android:layout_alignEnd="@id/textlayout_password"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_register"
        android:text="@string/forgetpass"
        android:id="@+id/textview_forget"
        android:layout_marginTop="8dp"
        android:layout_alignEnd="@+id/textview_register"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:onClick="SubmitData"
        android:id="@+id/button_submit"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"/>

</RelativeLayout>
